--- a/sass/material-kit.scss
+++ b/sass/material-kit.scss
@@ -8,10 +8,10 @@
  *
  * ========================================================= */
 //@import 'bootstrap.min';
-@import 'material-kit/variables';
-@import 'material-kit/mixins';
-@import 'material-kit/shadows';
-@import 'material-kit/misc';
+//@import 'material-kit/variables';
+//@import 'material-kit/mixins';
+//@import 'material-kit/shadows';
+//@import 'material-kit/misc';
 
 // core sass
 @import 'material-kit/form';
@@ -79,4 +79,4 @@
 
 @import 'material-kit/full-screen-loader';
 
-@import 'material-kit/responsive';
+//@import 'material-kit/responsive';
