--- a/sass/material-kit/_buttons.scss
+++ b/sass/material-kit/_buttons.scss
@@ -4,7 +4,7 @@
     border-radius: $border-radius-base;
     position: relative;
     padding: 12px 30px;
-    margin: 10px 1px;
+    //margin: 10px 1px;
 
     font-size: $mdb-btn-font-size-base;
     font-weight: 700;
@@ -70,40 +70,40 @@
 
     // social buttons
     &.btn-facebook {
-    	@include social-buttons-color($social-facebook);
+        @include social-buttons-color($social-facebook);
     }
     &.btn-twitter {
-    	@include social-buttons-color($social-twitter);
+        @include social-buttons-color($social-twitter);
     }
     &.btn-pinterest {
-    	@include social-buttons-color($social-pinterest);
+        @include social-buttons-color($social-pinterest);
     }
     &.btn-google {
-    	@include social-buttons-color($social-google);
+        @include social-buttons-color($social-google);
     }
     &.btn-linkedin {
-    	@include social-buttons-color($social-linkedin);
+        @include social-buttons-color($social-linkedin);
     }
     &.btn-dribbble {
-    	@include social-buttons-color($social-dribbble);
+        @include social-buttons-color($social-dribbble);
     }
     &.btn-github {
-    	@include social-buttons-color($social-github);
+        @include social-buttons-color($social-github);
     }
     &.btn-youtube {
-    	@include social-buttons-color($social-youtube);
+        @include social-buttons-color($social-youtube);
     }
     &.btn-instagram {
-    	@include social-buttons-color($social-instagram);
+        @include social-buttons-color($social-instagram);
     }
     &.btn-reddit {
-    	@include social-buttons-color($social-reddit);
+        @include social-buttons-color($social-reddit);
     }
     &.btn-tumblr {
-    	@include social-buttons-color($social-tumblr);
+        @include social-buttons-color($social-tumblr);
     }
     &.btn-behance {
-    	@include social-buttons-color($social-behance);
+        @include social-buttons-color($social-behance);
     }
 
     &:focus,
