--- a/sass/material-kit/_navbar.scss
+++ b/sass/material-kit/_navbar.scss
@@ -1,5 +1,3 @@
-
-
 .navbar {
   border: 0;
   border-radius: $border-radius-base;
@@ -138,7 +136,7 @@
     .icon-bar {
       background-color: inherit;
       border: 1px solid;
-      color: $white-color;
+      //color: $white-color;
     }
   }
 
@@ -270,7 +268,6 @@
       background-color: transparent;
       box-shadow: none;
       color: #fff;
-
       .logo-container .brand{
           color: $white-color;
       }
@@ -291,6 +288,9 @@
   @media (max-width: $screen-md-max) {
     &.navbar-transparent{
       padding-top: 0;
+      .navbar-collapse{
+        color:#555;
+      }
     }
 
     .navbar-brand{
