--- a/admin/sass/material-dashboard/_sidebar-and-main-panel.scss
+++ b/admin/sass/material-dashboard/_sidebar-and-main-panel.scss
@@ -611,15 +611,15 @@ header{
 }
 
 .background-morning{
-    background: url('assets/dashboard-bg-morning.jpg');
+    background: url('../assets/dashboard-bg-morning.jpg');
 }
 
 .background-afternoon{
-    background: url('assets/dashboard-bg-afternoon.jpg');
+    background: url('../assets/dashboard-bg-afternoon.jpg');
 }
 
 .background-night{
-    background: url('assets/dashboard-bg-night.jpg');
+    background: url('../assets/dashboard-bg-night.jpg');
 }
 .main-panel{
     max-height: 100%;
