--- a/admin/sass/material-dashboard/pages/_dashboard_old.scss
+++ b/admin/sass/material-dashboard/pages/_dashboard_old.scss
@@ -16,15 +16,15 @@
     }
 
     .background-morning{
-        background: url('assets/dashboard-bg-morning.jpg');
+        background: url('../assets/dashboard-bg-morning.jpg');
     }
 
     .background-afternoon{
-        background: url('assets/dashboard-bg-afternoon.jpg');
+        background: url('../assets/dashboard-bg-afternoon.jpg');
     }
 
     .background-night{
-        background: url('assets/dashboard-bg-night.jpg');
+        background: url('../assets/dashboard-bg-night.jpg');
     }
 
     #introduction{
